# search_engine

./: CMakeLists.txt  converterjson.cpp  converterjson.h  invertedindex.cpp  invertedindex.h  main.cpp  readme.md  searchserver.cpp
config/: answers.json  config.json  requests.json
include/: converterjson.h  searchserver.h
nlohmann_json/: CMakeLists.txt
nlohmann_json/cmake/: ci.cmake
nlohmann_json/src/modules/: CMakeLists.txt
src/: CMakeLists.txt  converterjson.cpp  main.cpp
tests/: CMakeLists.txt  index_tests.cpp  server_tests.cpp
